# AI-med-agent

./: .gitignore  README.md  pyproject.toml  test_litellm_groq.py
knowledge/: checkpoint_inhibitors.txt  lung_cancer_immunotherapy.txt  resistance_mechanisms.txt
src/med_agent/: .env  crew.py  main.py  requirements.txt  test_api.py  test_components.py  webui.py
src/med_agent/MCP_Server/: README.md  pyproject.toml
src/med_agent/MCP_Server/src/medical_agent_mcp/: __main__.py  server.py
src/med_agent/agents/: base.py  embedding_tasks.py  research_agent.py  synthesis_agent.py
src/med_agent/config/: agents.yaml  settings.py  tasks.yaml
src/med_agent/static/: app.js  style.css
src/med_agent/templates/: index.html
src/med_agent/tools/: base.py  cdc.py  clinicaltrials.py  drugs.py  pubmed.py  query_classification.py  synthesis.py
tests/: test_agent.py  tests.py
