[project]
name = "med_agent"
version = "0.1.0"
description = "med-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
med_agent = "med_agent.main:run"
run_crew = "med_agent.main:run"
train = "med_agent.main:train"
replay = "med_agent.main:replay"
test = "med_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.workspace]
members = [
    "src/med_agent/MCP server",
]
